--- a/01-argocd/01-clusters/nonprod/bootstrap/bootstrap-application.yaml
+++ b/01-argocd/01-clusters/nonprod/bootstrap/bootstrap-application.yaml
@@ -8,8 +8,8 @@ spec:
     server: https://kubernetes.default.svc
   project: developer-bootstrap
   source:
-    path: 02-developers/01-argocd/01-clusters/nonprod
-    repoURL: https://github.com/pittar-demos/rosa-devops.git
+    path: 01-argocd/01-clusters/nonprod
+    repoURL: http://gitea.scm.svc.cluster.local:3000/developer/battle-developer-devops.git
     targetRevision: main
   syncPolicy:
     automated:
