Add prometheus label to services.

--- a/02-tenants/superhero-battle/base/event-statistics/app/event-statistics-service.yaml
+++ b/02-tenants/superhero-battle/base/event-statistics/app/event-statistics-service.yaml
@@ -17,6 +17,7 @@ metadata:
     application: event-stats
     system: quarkus-super-heroes
     app.openshift.io/runtime: quarkus
+    prometheus-metrics: "true"
   name: event-statistics
 spec:
   ports:
