--- a/02-tenants/superhero-battle/base/villains/app/rest-villains-service.yaml
+++ b/02-tenants/superhero-battle/base/villains/app/rest-villains-service.yaml
@@ -16,6 +16,7 @@ metadata:
     system: quarkus-super-heroes
     app.openshift.io/runtime: quarkus
     name: rest-villains
+    prometheus-metrics: "true"
   name: rest-villains
 spec:
   ports:
