Updated deployment names

--- a/02-tenants/superhero-battle/base/event-statistics/app/event-statistics-deploy.yaml
+++ b/02-tenants/superhero-battle/base/event-statistics/app/event-statistics-deploy.yaml
@@ -23,7 +23,7 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      name: event-statistics
+      name: battle-event-statistics
   template:
     metadata:
       annotations:
