--- a/02-tenants/superhero-battle/base/heroes/app/rest-heroes-deploy.yaml
+++ b/02-tenants/superhero-battle/base/heroes/app/rest-heroes-deploy.yaml
@@ -18,7 +18,7 @@ metadata:
     system: quarkus-super-heroes
     app.openshift.io/runtime: quarkus
     name: rest-heroes
-  name: rest-heroes
+  name: battle-rest-heroes
 spec:
   replicas: 1
   selector:
