--- a/02-tenants/superhero-battle/base/battle-ui/app/battle-ui-deploy.yaml
+++ b/02-tenants/superhero-battle/base/battle-ui/app/battle-ui-deploy.yaml
@@ -13,7 +13,7 @@ metadata:
     prometheus.io/path: /metrics
     prometheus.io/port: "8080"
     prometheus.io/scheme: http
-  name: ui-super-heroes
+  name: battle-ui
 spec:
   replicas: 1
   selector:
