--- a/02-tenants/superhero-battle/base/villains/app/rest-villains-deploy.yaml
+++ b/02-tenants/superhero-battle/base/villains/app/rest-villains-deploy.yaml
@@ -18,7 +18,7 @@ metadata:
     system: quarkus-super-heroes
     app.openshift.io/runtime: quarkus
     name: rest-villains
-  name: rest-villains
+  name: battle-rest-villains
 spec:
   replicas: 1
   selector:
