--- a/02-tenants/superhero-battle/base/battle-ui/app/battle-ui-deploy.yaml
+++ b/02-tenants/superhero-battle/base/battle-ui/app/battle-ui-deploy.yaml
@@ -8,7 +8,7 @@ metadata:
     app.openshift.io/runtime: nodejs
     app.kubernetes.io/part-of: super-heroes
   annotations:
-    app.openshift.io/connects-to: rest-fights,rest-heroes,rest-villains
+    app.openshift.io/connects-to: battle-rest-fights,battle-rest-heroes,battle-rest-villains
     prometheus.io/scrape: "true"
     prometheus.io/path: /metrics
     prometheus.io/port: "8080"
