Remove sonar from tests for now.

--- a/02-tenants/superhero-battle/base/cicd/quarkus-pipeline/quarkus-pipeline.yaml
+++ b/02-tenants/superhero-battle/base/cicd/quarkus-pipeline/quarkus-pipeline.yaml
@@ -52,10 +52,11 @@ spec:
         - name: GOALS
           value:
             - clean
-            - verify
-            - sonar:sonar
-            - '-Dsonar.host.url=http://sonarqube.cicd-tools.svc.cluster.local:9000'
-            - '-Pquality'
+            - package
+            #- verify
+            #- sonar:sonar
+            #- '-Dsonar.host.url=http://sonarqube.cicd-tools.svc.cluster.local:9000'
+            #- '-Pquality'
             - '-DskipTests'
         - name: PROXY_PROTOCOL
           value: http
