--- a/01-argocd/02-tenants/superhero-battle/cicd/superhero-battle-cicd-application.yaml
+++ b/01-argocd/02-tenants/superhero-battle/cicd/superhero-battle-cicd-application.yaml
@@ -19,7 +19,7 @@ spec:
   syncPolicy:
     automated:
       prune: false
-      selfHeal: false
+      selfHeal: true
     syncOptions:
       - ApplyOutOfSyncOnly=true
     retry:
