--- a/02-tenants/superhero-battle/base/cicd/quarkus-pipeline/quarkus-pipeline.yaml
+++ b/02-tenants/superhero-battle/base/cicd/quarkus-pipeline/quarkus-pipeline.yaml
@@ -43,7 +43,7 @@ spec:
           value: /tekton/home
       taskRef:
         kind: ClusterTask
-        name: git-clone-1-8-0
+        name: git-clone
       workspaces:
         - name: output
           workspace: pipeline-workspace
@@ -66,7 +66,7 @@ spec:
         - git-clone
       taskRef:
         kind: ClusterTask
-        name: maven-1-8-0
+        name: maven
       workspaces:
         - name: source
           workspace: pipeline-workspace
@@ -90,7 +90,7 @@ spec:
         - maven
       taskRef:
         kind: ClusterTask
-        name: buildah-1-8-0
+        name: buildah
       workspaces:
         - name: source
           workspace: pipeline-workspace
